--- a/youtube_swapper/manifest.json
+++ b/youtube_swapper/manifest.json
@@ -1,6 +1,6 @@
 {
 	"name": "YouTube Swapper",
-	"description": "My Extension",
+	"description": "Experience YouTube uncensored",
 	"version": "0.1",
 	"version_name": "Alpha 1.0",
 	"manifest_version": 2,
